k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-map
  labels:
    app: platform-map
spec:
  type: ClusterIP
  selector:
    app: platform-map
  ports:
    - name: http
      port: 80
      targetPort: http
